--- a/UserServices/src/main/resources/application.yml
+++ b/UserServices/src/main/resources/application.yml
@@ -1,13 +1,14 @@
 server:
   port: 8081
 
+
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/camber_user
     username: root
     password: mypass
     driver-class-name: com.mysql.cj.jdbc.Driver
-
 
   jpa:
     hibernate:
@@ -17,10 +18,12 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
 
+  application:
+    name: USER-SERVICE
+
 eureka:
   instance:
     prefer-ip-address: true
-
   client:
     fetch-registry: true
     register-with-eureka: true
