--- a/ConfigServer/src/main/resources/application.yml
+++ b/ConfigServer/src/main/resources/application.yml
@@ -4,10 +4,9 @@ server:
 spring:
   application:
     name: CONFIG-SERVER
-
-
-cloud:
-  config:
-    server:
-      git:
-        uri:
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/omargabrielaguilar/conf-hotel
+          clone-on-start: true
