--- a/UserServices/src/main/resources/application.yml
+++ b/UserServices/src/main/resources/application.yml
@@ -61,3 +61,10 @@ resilience4j:
       ratingHotelService:
         max-attempts: 3
         wait-duration: 5s
+
+  ratelimiter:
+    instances:
+      userRateLimiter:
+        limit-refresh-period: 4s
+        limit-for-period: 2
+        timeout-duration: 0s
